<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        style="@style/BgWisata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Back Button -->
            <ImageView
                android:id="@+id/btn_back"
                style="@style/BtnBack"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:contentDescription="@string/back_button"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck,RedundantDescriptionCheck" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/TvTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/detail_wisata"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cv_image"/>

            <!-- Gambar Utama dengan CardView untuk efek bayangan -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_image"
                style="@style/CvImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <ImageView
                    android:id="@+id/iv_wisata"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:contentDescription="@string/wisata_image"
                    android:scaleType="centerCrop"
                    tools:ignore="ImageContrastCheck"
                    tools:src="@drawable/placeholder_image" />
            </androidx.cardview.widget.CardView>

            <!-- Container Card untuk Konten -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_content_wisata"
                style="@style/CvImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cv_image">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_20sdp">

                    <!-- Judul -->
                    <TextView
                        android:id="@+id/tv_title_wisata"
                        style="@style/TvTitleWisata"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nama_wisata"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Lokasi dengan Icon -->
                    <ImageView
                        android:id="@+id/ic_location"
                        style="@style/IcLocation"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:contentDescription="@string/location_icon"
                        android:src="@drawable/ic_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title_wisata"
                        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

                    <TextView
                        android:id="@+id/tv_location"
                        style="@style/TvLocation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/lokasi_wisata"
                        app:layout_constraintBottom_toBottomOf="@id/ic_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ic_location"
                        app:layout_constraintTop_toTopOf="@id/ic_location" />

                    <!-- Divider -->
                    <View
                        android:id="@+id/divider"
                        style="@style/LineDivider"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_location" />

                    <!-- Deskripsi -->
                    <TextView
                        android:id="@+id/title_description"
                        style="@style/TvTitleDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/deskripsi_wisata"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/divider" />

                    <TextView
                        android:id="@+id/tv_description"
                        style="@style/TvDescription"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/deskripsi_wisata"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/title_description" />

                    <!-- Tombol dengan Material Design -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_bookmark"
                        style="@style/CustomBookmarkButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bookmark"
                        app:layout_constraintEnd_toStartOf="@id/btn_like"
                        app:layout_constraintTop_toBottomOf="@id/tv_description" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_like"
                        style="@style/CustomBtnLike"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/like"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/btn_bookmark" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>