<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_12sdp"
    app:cardElevation="@dimen/_4sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Gambar Wisata -->
        <ImageView
            android:id="@+id/iv_wisata"
            android:layout_width="0dp"
            android:layout_height="@dimen/_180sdp"
            android:contentDescription="@string/image_wisata"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <!-- Nama Wisata -->
        <TextView
            android:id="@+id/tv_nama_wisata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/nama_wisata"
            android:textColor="#212121"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/btn_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_wisata" />

        <!-- Lokasi Wisata -->
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:drawablePadding="@dimen/_4sdp"
            android:text="@string/lokasi"
            android:textColor="#757575"
            android:textSize="@dimen/_14ssp"
            android:maxLines="2"
            android:ellipsize="end"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="#757575"
            app:layout_constraintEnd_toStartOf="@id/btn_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_wisata" />

        <!-- Deskripsi Singkat -->
        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:text="@string/deskripsi_singkat_tentang_tempat_wisata_ini"
            android:textColor="#757575"
            android:textSize="@dimen/_14ssp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@id/btn_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_location"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <!-- Tombol Like -->
        <ImageView
            android:id="@+id/btn_like"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/like"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_like"
            app:layout_constraintEnd_toStartOf="@id/btn_bookmark"
            app:layout_constraintTop_toBottomOf="@id/iv_wisata"
            tools:ignore="ImageContrastCheck" />

        <!-- Tombol Bookmark -->
        <ImageView
            android:id="@+id/btn_bookmark"
            android:layout_width="@dimen/_36sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_bookmark"
            android:contentDescription="@string/bookmark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_wisata" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>