<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.adista.destour_middle.ui.login.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        style="@style/LayoutScrollView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Logo -->
            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginBottom="@dimen/_24sdp"
                android:padding="@dimen/_10sdp"
                android:contentDescription="@string/logo_destour"
                android:src="@drawable/logo_destour"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/bg_login_top_gradient"/>


            <!-- Title -->
            <TextView
                android:id="@+id/tv_title"
                style="@style/TitleLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintTop_toBottomOf="@id/img_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/tv_subtitle"
                style="@style/SubTitleLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masukkan_email_dan_password_anda"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/EditTextLoginRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14sdp"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/ic_lock"
                app:endIconMode="password_toggle"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/EditTextLoginRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <Button
                android:id="@+id/btn_login"
                style="@style/ButtonLoginRegister"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.loginUser()}"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_password"
                tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize,TextContrastCheck" />

            <!-- Register Text -->
            <TextView
                android:id="@+id/tv_register"
                style="@style/SubTitleLoginRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/belum_punya_akun_daftar_di_sini"
                app:layout_constraintTop_toBottomOf="@id/btn_login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_14sdp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
